# mtpydemo

./: CMakeLists.txt  check.py  check.sh  checkgil.py  demo.py  localpy.sh  mtpi.py  readme.md  rundemo.sh  runmtpi.sh
opt/: buildpy.sh
src/: mtengine.cpp  pythreads.h
